@@ -2,14 +2,18 @@ package net.n2oapp.framework.config.metadata.compile.toolbar;
 
 import net.n2oapp.framework.api.metadata.meta.page.SimplePage;
 import net.n2oapp.framework.api.metadata.meta.toolbar.Toolbar;
+import net.n2oapp.framework.api.metadata.meta.widget.table.BaseColumn;
+import net.n2oapp.framework.api.metadata.meta.widget.table.MultiColumn;
+import net.n2oapp.framework.api.metadata.meta.widget.table.Table;
+import net.n2oapp.framework.api.metadata.meta.widget.table.TableWidgetComponent;
 import net.n2oapp.framework.api.metadata.meta.widget.toolbar.AbstractButton;
-import net.n2oapp.framework.api.metadata.meta.widget.toolbar.ColumnsButton;
 import net.n2oapp.framework.api.metadata.meta.widget.toolbar.Group;
 import net.n2oapp.framework.api.metadata.meta.widget.toolbar.Submenu;
 import net.n2oapp.framework.config.N2oApplicationBuilder;
 import net.n2oapp.framework.config.metadata.compile.context.PageContext;
 import net.n2oapp.framework.config.metadata.pack.*;
 import net.n2oapp.framework.config.test.SourceCompileTestBase;
+import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -18,6 +22,7 @@ import java.util.function.Function;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.*;
 
 class TableSettingsCompileTest extends SourceCompileTestBase {
 
@@ -30,19 +35,75 @@ class TableSettingsCompileTest extends SourceCompileTestBase {
     @Override
     protected void configure(N2oApplicationBuilder builder) {
         super.configure(builder);
-        builder.packs(new N2oWidgetsPack(), new N2oActionsPack(), new N2oAllDataPack(), new N2oPagesPack(),
-                new N2oFieldSetsPack(), new N2oControlsPack(), new N2oRegionsPack(), new N2oTableSettingsIOPack());
+        builder.packs(
+                new N2oPagesPack(),
+                new N2oWidgetsPack(),
+                new N2oAllDataPack(),
+                new N2oCellsPack(),
+                new N2oActionsPack());
+    }
+
+    @Test
+    void testColumnsTableSettingsInMultiColumn() {
+        SimplePage page = (SimplePage) compile(
+                "net/n2oapp/framework/config/metadata/compile/toolbar/table_settings/testColumnsTableSettings.page.xml",
+                "net/n2oapp/framework/config/metadata/compile/stub/utBlank2.query.xml")
+                .get(new PageContext("testColumnsTableSettings"));
+
+        Table<?> table = (Table<?>) page.getWidget();
+        TableWidgetComponent.TableHeader header = table.getComponent().getHeader();
+
+        assertThat(header.getCells(), hasSize(5));
+        checkColumn((BaseColumn) header.getCells().get(0), "id", false, true);
+
+        MultiColumn multiColumn1 = (MultiColumn) header.getCells().get(1);
+        MultiColumn multiColumn2 = (MultiColumn) header.getCells().get(2);
+        MultiColumn multiColumn3 = (MultiColumn) header.getCells().get(3);
+        MultiColumn multiColumn4 = (MultiColumn) header.getCells().get(4);
+
+        checkColumn(multiColumn1, "id_multi1", false, true);
+        checkColumn(multiColumn1.getChildren().get(0), "name", false, true);
+        checkColumn(multiColumn1.getChildren().get(1), "type", false, true);
+
+        checkColumn(multiColumn2, "id_multi2", false, true);
+        checkColumn(multiColumn2.getChildren().get(0), "status", false, true);
+        checkColumn(multiColumn2.getChildren().get(1), "region", false, true);
+
+        MultiColumn nestedMulti = (MultiColumn) multiColumn2.getChildren().get(2);
+        checkColumn(nestedMulti, null, false, true);
+        checkColumn(nestedMulti.getChildren().get(0), "city", false, true);
+        checkColumn(nestedMulti.getChildren().get(1), "country", false, true);
+
+        checkColumn(multiColumn3, "id_multi3", true, true);
+        checkColumn(multiColumn3.getChildren().getFirst(), "address", true, true);
+
+        checkColumn(multiColumn4, null, true, false);
+        checkColumn(multiColumn4.getChildren().getFirst(), "gender", true, false);
+    }
+
+    private static void checkColumn(BaseColumn column, String id, boolean enabled, boolean visibleState) {
+        if (id == null)
+            assertThat(column.getId(), nullValue());
+        else
+            assertThat(column.getId(), is(id));
+        assertThat(column.getEnabled(), is(enabled));
+        assertThat(column.getVisibleState(), is(visibleState));
     }
 
     @Test
     void testTableSettings() {
-        SimplePage page = (SimplePage) compile("net/n2oapp/framework/config/metadata/compile/toolbar/testTableSettings.page.xml")
+        SimplePage page = (SimplePage) compile("net/n2oapp/framework/config/metadata/compile/toolbar/table_settings/testTableSettings.page.xml",
+                "net/n2oapp/framework/config/metadata/compile/stub/utBlank2.query.xml")
                 .get(new PageContext("testTableSettings"));
+        Table<?> table = (Table<?>) page.getWidget();
+        TableWidgetComponent.TableHeader header = table.getComponent().getHeader();
+        assertThat(header.getCells().size(), Matchers.is(3));
+
         Toolbar toolbar = page.getWidget().getToolbar();
         List<Group> groups = toolbar.getGroups();
         assertThat(groups.size(), is(2));
 
-        List<AbstractButton> buttons = groups.get(0).getButtons();
+        List<AbstractButton> buttons = groups.getFirst().getButtons();
         checkButtons(buttons, AbstractButton::getHint);
         assertThat(buttons.get(9).getSrc(), is("DropdownButton"));
 
@@ -59,7 +120,6 @@ class TableSettingsCompileTest extends SourceCompileTestBase {
         checkButtons(buttons, AbstractButton::getLabel);
         assertThat(buttons.get(9).getSrc(), is("StandardButton"));
         assertThat(buttons.get(9).getId(), is("action2"));
-
     }
 
     private static void checkButtons(List<AbstractButton> buttons, Function<AbstractButton, String> labelExtractor) {
@@ -74,8 +134,6 @@ class TableSettingsCompileTest extends SourceCompileTestBase {
 
         assertThat(buttons.get(3).getSrc(), is("ToggleColumn"));
         assertThat(labelExtractor.apply(buttons.get(3)), is("Скрытие столбцов"));
-        assertThat(((ColumnsButton) buttons.get(3)).getDefaultColumns(), is("id,name,region"));
-        assertThat(((ColumnsButton) buttons.get(3)).getLocked(), is("id,name"));
 
         assertThat(buttons.get(4).getSrc(), is("StandardButton"));
         assertThat(labelExtractor.apply(buttons.get(4)), is("Фильтры"));
